--- a/projetos.html
+++ b/projetos.html
@@ -2,7 +2,7 @@
 <html lang="pt" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Nosso grupo</title>
+    <title>Projetos</title>
     <link rel="stylesheet" href="index.css">
   </head>
     <body>
