--- a/projetos.html
+++ b/projetos.html
@@ -7,6 +7,7 @@
   </head>
     <body>
         <header>
+            <img src = "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSRYpxPMuaBdWU4lHELXun7VTHjVclyCjOsng&usqp=CAU">
             <ul>
                 <li>Home</li>
                 <li>Projetos</li>
