--- a/Alunos.html
+++ b/Alunos.html
@@ -2,8 +2,10 @@
 <html lang="pt" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Projetos</title>
+    <title>Alunos</title>
     <link rel="stylesheet" href="index.css">
   </head>
     <body>
         <header>
+            <h1>Em construção</h1>
+        </header>
