--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
 <html lang="pt" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Nosso grupo</title>
+    <title>Home</title>
+    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="index.css">
   </head>
+
   <body>
+    <header>
 
       <div class="texto-principal" >
         <h1>Formadores em Ação - Programação Ensino Médio</h1>
