--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <ul>
         <li class="itens">Conhecer os professores e as professoras da SEED</li>
         <li class="itens">Resolver dúvidas em grupo</li>
-        <li class="itens">Construir espaços colaboração</li>
+        <li class="itens">Construir espaços PARA colaboração</li>
       </ul>
   </div>
   
